<resources>
    <string name="app_name">SpellIT</string>
    <string name="username">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">You are welcome!</string>
    <string name="words">Изучение слов</string>
    <string name="settings">Настройки</string>
    <string name="vocabulary">Словарь слов</string>
    <string name="error_user_not_exist">Ошибка: пользователь с таким логином и паролем не найден</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="register_successful">Регистрация прошла успешно</string>
    <string name="register_failure">Ошибка: регистрация не удалась</string>
    <string name="register_failure_repeating_password">Ошибка: Пароли не совпадают</string>
    <string name="new_word">Новое слово</string>
    <string name="new_category">Новая категория</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_name_category">Введите название категории</string>
    <string name="add_category">Добавить категорию</string>
    <string name="Category">Название</string>
    <string name="new_word">Новое слово</string>
    <string name="learning">Выучено</string>
    <string name="add_word">Добавить</string>
    <string name="write_word">Введите слово</string>
    <string name="choose_shrift">Выберите шрифт</string>
    <string name="what_is_the_word">Угадайте слово</string>
    <string name="input_word">Введите слово</string>
    <string name="check_input">Проверить</string>
    <string name="play">Воспроизвести</string>
    <string name="learning">Выучено</string>
</resources>